rspec-tools/tests/resources/invalid-rules/S200/common/rule.adoc
// == Why is this an issue? is missing
== How to fix it?
== Resources
